# DocumentaAi

./: .gitignore  CLAUDE.md  Jenkinsfile  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
mcp-server/: index.ts  knowledge.ts  package-lock.json  package.json  tsconfig.json
scripts/: jenkins-setup.sh
src/: App.tsx  QuickCaptureApp.tsx  index.css  quick-capture.tsx
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json  quick-capture.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat_agent.rs  lib.rs  main.rs  sync_server.rs
src/components/arcade/: ArcadeHub.tsx  HangmanGame.tsx  ListeningGame.tsx  MatchPairsGame.tsx  MemoryGame.tsx  MultipleChoiceGame.tsx  SentenceScrambleGame.tsx  TypeAnswerGame.tsx
src/components/changelog/: ChangelogModal.tsx
src/components/chat/: ChatPanel.tsx
src/components/editor/: AIContinueModal.tsx  BoardEditor.tsx  CanvasEditor.tsx  Editor.tsx  FindInPageBar.tsx  FolderView.tsx
src/components/flashcards/: FlashcardPanel.tsx
src/components/graph/: GraphView.tsx
src/components/home/: HomeScreen.tsx
src/hooks/: useIsMobile.ts  useUpdater.ts
src/lib/: arcade.ts  canvas-library.ts  changelog.ts  db.ts  export.ts  flashcard-import.ts  flashcard-pdf.ts  markdown-import.ts  pdf-export.ts  reveal.ts  sm2.ts  snippets.ts  sound.ts  sync.ts  tags.ts  templates.ts  text-search.ts  translate.ts  tts.ts
src/store/: pages.store.ts  ui.store.ts
src/types/: index.ts  pdfmake-fonts.d.ts
website/: index.html  setup-mcp.md
(+9 files in other folders)
