[package]
name = "documentaai"
version = "1.6.0"
description = "DocumentaAI - Ferramenta de documentação pessoal"
authors = []
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "documentaai"
path = "src/main.rs"

[lib]
name = "documentaai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Plugins que só existem no desktop (não compilam para Android/iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
# Servidor de sync por rede local (desktop é o servidor; mobile é cliente via fetch)
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
local-ip-address = "0.6"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
